--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.1_spec</artifactId>
-            <version>1.0.1.Final1</version>
+            <version>1.0.1.Final</version>
             <scope>provided</scope>
         </dependency>
 
